# gofish

./: CMakeLists.txt  LICENSE
gofishlib/: BaseCardPool.cpp  BaseCardPool.h  Books.cpp  Books.h  CCommon.h  CMakeLists.txt  Card.cpp  Card.h  CardPool.cpp  CardPool.h  Context.cpp  Context.h  CppCommon.h  Deck.cpp  Deck.h  ExternalSymbols.cpp  ExternalSymbols.h  Game.cpp  Game.h  IBooks.h  IDeck.h  IPlayer.h  Logger.cpp  Logger.h  Player.cpp  Player.h  conanfile.txt
gofishlib/header/: Books.h  CCommon.h  Card.h  CardPool.h  ConsoleLogger.h  CppCommon.h  Deck.h  ExternalSymbols.h  Game.h  ILogger.h  IPlayer.h  Player.h
gofishlib/source/: Books.cpp  Card.cpp  CardPool.cpp  ConsoleLogger.cpp  Deck.cpp  ExternalSymbols.cpp  Game.cpp  Game.h  Player.cpp  Player.h
gofishtest/: CMakeLists.txt  dealtests.c  main.c  memorytests.c  playtests.c
